@@ -24,8 +24,6 @@ import os
 import errno
 import sys
 
-OWLOG = ("HOMEVENT_LOG_ONEWIRE" in os.environ)
-
 N_PRIO = 3
 PRIO_URGENT = 0
 PRIO_STANDARD = 1
@@ -144,7 +142,7 @@ class OWFSreceiver(object,protocol.Protocol, _PauseableMixin):
 				version, payload_len, ret_value, format_flags, data_len, offset = struct.unpack('!6i', self.data[:24])
 				self.data = self.data[24:]
 
-				if OWLOG: log(DEBUG,"OW RECV", version, payload_len, ret_value, format_flags, data_len, offset)
+				log("onewire",DEBUG,"RECV", version, payload_len, ret_value, format_flags, data_len, offset)
 				# 0 253 0 2 252 32774
 				if offset & 32768: offset = 0
 
@@ -195,7 +193,7 @@ class OWFSreceiver(object,protocol.Protocol, _PauseableMixin):
 		flags |= OWtempformat.celsius << OWtempformat._offset
 		flags |= OWdevformat.fdi << OWdevformat._offset
 
-		if OWLOG: log(DEBUG,"OW SEND", 0, len(data), typ, flags, rlen, 0, repr(data))
+		log("onewire",DEBUG,"SEND", 0, len(data), typ, flags, rlen, 0, repr(data))
 		self.transport.write(struct.pack("!6i", \
 			0, len(data), typ, flags, rlen, 0) +data)
 
@@ -233,7 +231,7 @@ class OWFScall(object):
 
 	def dataReceived(self, data):
 		# child object expect this
-		if OWLOG: log(DEBUG,"OWFS done: ",self)
+		log("onewire",DEBUG,"done: ",self)
 		if self.d is not None:
 			self.d.callback(data)
 
@@ -250,7 +248,7 @@ class OWFScall(object):
 	def error(self,err):
 		"""An error occurred."""
 		if not self.d.called:
-			if OWLOG: log(DEBUG,"OWFS done error: ",self,err)
+			log("onewire",DEBUG,"done error: ",self,err)
 			self.d.errback(err)
 		else:
 			process_failure(err)
@@ -401,7 +399,7 @@ class DIRmsg(OWFStimeout,OWFScall):
 	
 	### TODO: retry with "dir" if the server does not understand "dirall"
 	def done(self, _=None):
-		if OWLOG: log(DEBUG,"OWFS doneDIR",self)
+		log("onewire",DEBUG,"doneDIR",self)
 		self.d.callback(_)
 		return super(DIRmsg,self).done()
 
@@ -422,7 +420,7 @@ class OWFSqueue(OWFSreceiver):
 	def send(self,msg):
 		assert self.msg is None, "OWFS Message already in transit!"
 		self.msg = msg
-		if OWLOG: log(DEBUG,"OWFS send for",self.msg)
+		log("onewire",DEBUG,"send for",self.msg)
 		msg.send(self)
 
 	def ping(self):
@@ -441,21 +439,21 @@ class OWFSqueue(OWFSreceiver):
 		self.factory.haveConnection(self)
 
 	def msgReceived(self, typ, data):
-		if OWLOG: log(DEBUG,"OWFS recv for %s: %d: %s"%(self.msg,typ,repr(data)))
+		log("onewire",DEBUG,"recv for %s: %d: %s"%(self.msg,typ,repr(data)))
 		self.n_msgs += 1
 		if not self.msg:
 			log(ERROR,"Spurious OWFS message",typ,data)
 			return
 		try:
 			if self.msg.msgReceived(typ,data):
-				if OWLOG: log(DEBUG,"OWFS recv again")
+				log("onewire",DEBUG,"recv again")
 				return
 		except Exception,e:
-			if OWLOG: log(DEBUG,"OWFS recv err",e)
+			log("onewire",DEBUG,"recv err",e)
 			#process_failure()
 			self.is_done(e)
 		else:
-			if OWLOG: log(DEBUG,"OWFS recv done")
+			log("onewire",DEBUG,"recv done")
 			self.is_done()
 	
 	def errReceived(self,err):
@@ -473,10 +471,10 @@ class OWFSqueue(OWFSreceiver):
 		self.factory.send_done(disconnect=(res is not None or n_msgs == 0))
 
 		if msg is None:
-			if OWLOG: log(DEBUG,"OWFS done NO_MSG",res)
+			log("onewire",DEBUG,"done NO_MSG",res)
 			return
 
-		if OWLOG: log(DEBUG,"OWFS done",msg.prio,self.msg,res)
+		log("onewire",DEBUG,"done",msg.prio,self.msg,res)
 		if res is not None:
 			self.retry(msg,res)
 		elif n_msgs or msg.empty_ok:
@@ -537,7 +535,6 @@ class OWFSfactory(object,ReconnectingClientFactory):
 		self.root = OWFSroot(self)
 		self.watcher_id = None
 		self.nop = None
-		self.trace_retry = OWLOG
 
 	def _init_queues(self):
 		self.queues = []
@@ -563,7 +560,7 @@ class OWFSfactory(object,ReconnectingClientFactory):
 		return NOPmsg()
 
 	def queue(self,msg):
-		if OWLOG: log(DEBUG,"OWFS queue",msg.prio,msg)
+		log("onewire",DEBUG,"queue",msg.prio,msg)
 		if not self.continueTrying:
 			msg.d.errback(DisconnectedBusError(self.name))
 			return defer.fail(DisconnectedBusError(self.name))
@@ -619,7 +616,7 @@ class OWFSfactory(object,ReconnectingClientFactory):
 		if self.persist:
 			log(INFO,reason)
 		else:
-			if OWLOG: log(TRACE,reason)
+			log("onewire",TRACE,reason)
 
 		if self.has_queued():
 			connector.connect()
@@ -818,7 +815,7 @@ class OWFSdevice(object):
 			return self
 
 	def _init(self, bus, short_id=None, id=None, path=()):
-		if OWLOG: log(DEBUG,"OW NEW", bus,short_id,id,path)
+		log("onewire",DEBUG,"NEW", bus,short_id,id,path)
 		self.bus_id = id
 		self.id = short_id
 		self.bus = bus
